--- a/xpi/content/css/closetab_none.css
+++ b/xpi/content/css/closetab_none.css
@@ -1,7 +1,9 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul) {
-	.tabbrowser-tab .tab-close-button {
+	.tabbrowser-tab:not([pinned]):not([protected]) .tab-close-button,
+	#main-window[tabmix_lwt="true"] #TabsToolbar .tabbrowser-tab[protected] .tab-close-button,
+	#main-window[tabmix_lwt="false"] #TabsToolbar .tabbrowser-tab[protected] .tab-close-button{
 	  visibility: collapse !important;
 	}
 }
