--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -175,6 +175,7 @@
 	#appmenu-popup #appmenu-paste{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_paste.png");
 	}
+	#ctraddon_context_menu_entry,
 	#ctraddon_tools_menu_entry,
 	#appmenu-popup #ctraddon_appmenu_ctr{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_ctr.png");
