--- a/xpi/content/css/closetab_tb_start.css
+++ b/xpi/content/css/closetab_tb_start.css
@@ -8,6 +8,11 @@
 	  visibility: visible !important;
 	  -moz-box-ordinal-group: 0 !important;
 	}
+	#main-window #navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton{
+	  -moz-appearance: none !important;
+	  border: none !important;
+	  padding: 0px !important;
+	}
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
