--- a/xpi/content/css/linux/starinurlextra.css
+++ b/xpi/content/css/linux/starinurlextra.css
@@ -1,7 +1,31 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
-
+	
+	#urlbar-icons #bookmarks-menu-button .toolbarbutton-icon {
+	  -moz-image-region: rect(0px 18px 18px 0px);
+	  opacity: 1.0 !important;
+	}
+	#urlbar-icons #bookmarks-menu-button:hover .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.3), hsla(45,100%,73%,0));
+	  -moz-image-region: rect(0px 36px 18px 18px);
+	}
+	#urlbar-icons #bookmarks-menu-button:hover:active .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.1), hsla(45,100%,73%,0));
+	  -moz-image-region: rect(0px 54px 18px 36px);
+	}
+	#urlbar-icons #bookmarks-menu-button[starred] .toolbarbutton-icon {
+	  -moz-image-region: rect(0px 18px 18px 0px);
+	}
+	#urlbar-icons #bookmarks-menu-button[starred]:hover .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.3), hsla(45,100%,73%,0));
+	  -moz-image-region: rect(0px 36px 18px 18px);
+	}
+	#urlbar-icons #bookmarks-menu-button[starred]:hover:active .toolbarbutton-icon {
+	  background-image: radial-gradient(circle closest-side, hsla(45,100%,73%,.1), hsla(45,100%,73%,0));
+	  -moz-image-region: rect(0px 54px 18px 36px);
+	}
+	
 	#urlbar-container #bookmarks-menu-button .toolbarbutton-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1lin.png");
 	}
