--- a/xpi/content/css/win8/curvedtabsextra.css
+++ b/xpi/content/css/win8/curvedtabsextra.css
@@ -13,5 +13,16 @@
 	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover .tab-background-end {
 	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, transparent 2px, hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)), linear-gradient(transparent, transparent 2px, -moz-dialog 0px, -moz-dialog), none !important;
 	}
+	
+	#TabsToolbar .tabs-newtab-button:not(:-moz-lwtheme){
+	  background-image: url(chrome://classic_theme_restorer/content/images/nt_win8_start.png),
+						url(chrome://classic_theme_restorer/content/images/nt_win8_middle.png),
+						url(chrome://classic_theme_restorer/content/images/nt_win8_end.png) !important;
+	}
+	#TabsToolbar .tabs-newtab-button:not(:-moz-lwtheme):hover{
+	  background-image: url(chrome://classic_theme_restorer/content/images/nt_win8_start_hov.png),
+						url(chrome://classic_theme_restorer/content/images/nt_win8_middle_hov.png),
+						url(chrome://classic_theme_restorer/content/images/nt_win8_end_hov.png) !important;
+	}
 
 }
